File update URI for Swagger
